syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc GoogleAuth (GoogleAuthRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GoogleAuthRequest {
  string token = 1;
  string tokenType = 2; // "id_token" or "access_token"
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
  User user = 3;
  int32 expiresIn = 4;
  int32 refreshExpiresIn = 5;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
  string profileImage = 6;
  string provider = 7;
  bool isVerified = 8;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message LogoutRequest {
  string userId = 1;
}

message LogoutResponse {
  bool success = 1;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}
